# 99problems

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  Cargo.toml  README.md  example.99problems  mkdocs.yml  package.json
.agents/: AGENTS.md
.agents/skills/99problems/references/: FORMS.md  REFERENCE.md
.githooks/: pre-commit
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: 01-feature.yml  02-bug.yml  99-custom.yml
.github/scripts/: publish.js
.github/workflows/: ci.yml  man-drift.yml  release.yml
docs/: agentic-workflow.md  configuration.md  getting-started.md  index.md
docs/commands/: completions.md  config.md  get.md  index.md  man.md  skill.md
docs/internal/: README.md
docs/man/: 99problems-completions.1  99problems-config.1  99problems-get.1  99problems-help.1  99problems-man.1  99problems.1
docs/providers/: bitbucket-cloud.md  bitbucket-datacenter.md  github.md  gitlab.md  index.md  jira.md
docs/reference/: config-keys.md  global-options.md  output-and-payload.md  query-semantics.md
npm/: install.js
src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  model.rs  output.rs
src/cmd/: get.rs  man.rs  mod.rs  skill.rs
src/cmd/config/: key.rs  mod.rs  render.rs  store.rs  write.rs
src/format/: json.rs  jsonl.rs  mod.rs  text.rs  yaml.rs
src/source/: github.rs  github_issues.rs  gitlab.rs  jira.rs  mod.rs
src/source/bitbucket/: api.rs  auth.rs  cloud.rs  datacenter.rs  dc.rs  mod.rs  model.rs  query.rs
src/source/bitbucket/cloud/: api.rs  mod.rs  model.rs
src/source/bitbucket/datacenter/: api.rs  mod.rs  model.rs
src/source/bitbucket/shared/: auth.rs  http.rs  mod.rs
src/source/github/: api.rs  mod.rs  model.rs  query.rs
src/source/gitlab/: api.rs  mod.rs  model.rs  query.rs
src/source/jira/: api.rs  mod.rs  model.rs  query.rs
templates/skills/99problems/: SKILL.md
templates/skills/99problems/agents/: openai.yaml
templates/skills/99problems/references/: FORMS.md  REFERENCE.md
tests/: integration.rs
