[package]
name = "problems99"
version = "0.4.0"
edition = "2024"
description = "AI-native CLI for issue/PR context retrieval across Jira, GitLab, GitHub, and Bitbucket, with structured output for humans and AI agents."
license = "Apache-2.0"

[[bin]]
name = "99problems"
path = "src/main.rs"

[lib]
name = "problems99"
path = "src/lib.rs"

[features]
default = ["telemetry-otel"]
telemetry-otel = [
  "dep:opentelemetry",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry_sdk",
  "dep:tracing-opentelemetry",
  "dep:reqwest-tracing",
]

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
dirs = "6.0.0"
reqwest = { version = "0.13", features = ["json", "query", "rustls", "http2", "gzip", "brotli", "zstd"], default-features = false }
reqwest-middleware = { version = "0.5.1", features = ["json", "query"] }
reqwest-tracing = { version = "0.7.0", features = ["opentelemetry_0_31"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "1.0.3"
toml_edit = "0.22"
tracing = "0.1"
tracing-opentelemetry = { version = "0.32", optional = true }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
opentelemetry = { version = "0.31", optional = true }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "http-proto", "reqwest-client"], optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "experimental_trace_batch_span_processor_with_async_runtime"], optional = true }

[dev-dependencies]
serde_json = "1"
